--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "next": "13.5.4",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
+    "@tailwindcss/postcss": "^4.1.5",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^4.1.5"
   }
 }
